--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.6",
-        "bower-asset/bootstrap": "~4.0.0@beta",
+        "bower-asset/bootstrap": "dev-v4-dev",
         "bower-asset/popper.js": "~1.12.0"
     },
     "autoload": {
